# Prompt_Eng_Take_Home

./: .env.example  README.md  pyproject.toml
src/: cli.py  main.py  notebook.ipynb  notebook_to_submit.ipynb
src/bad_results/: notebook.ipynb
src/evals/: run_evals.py  wikipedia_evals.json  wikipedia_evals_mini.json  wikipedia_evals_raw_from_Claude.json
