[project]
name = "Prompt_Eng_Take_Home"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
    "anthropic>=0.97.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.12",
]

[project.scripts]
claude-wikipedia = "src.cli:cli"
